// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleSection Pure not default collapseSettings 1`] = `
<div
  className="default-CollapsibleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsibleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerText default-CollapsibleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsibleSection-titleClass"
      />
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsibleSection-headerArrow closed"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsibleSection-bodyHolder closed"
  >
    <div
      className="default-CollapsibleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsibleSection Pure with headerSettings 1`] = `
<div
  className="default-CollapsibleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsibleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerText default-CollapsibleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsibleSection-titleClass"
      >
        title
      </span>
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            >
              firstColumnTerm
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            >
              secondColumnTerm
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsibleSection-headerText"
            >
              thirdColumnTerm
            </div>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsibleSection-headerArrow"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsibleSection-bodyHolder default-CollapsibleSection-headerCursor"
  >
    <div
      className="default-CollapsibleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsibleSection Pure without headerSettings 1`] = `
<div
  className="default-CollapsibleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsibleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerText default-CollapsibleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsibleSection-titleClass"
      />
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsibleSection-headerArrow"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsibleSection-bodyHolder default-CollapsibleSection-headerCursor"
  >
    <div
      className="default-CollapsibleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsibleSection Pure without headerSettings 2`] = `
<div
  className="default-CollapsibleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsibleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerText default-CollapsibleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsibleSection-titleClass"
      />
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsibleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsibleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsibleSection-headerText"
            />
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsibleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsibleSection-headerArrow"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsibleSection-bodyHolder default-CollapsibleSection-headerCursor"
  >
    <div
      className="default-CollapsibleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;
